--- a/css/page15.css
+++ b/css/page15.css
@@ -36,13 +36,13 @@ textarea {
 }
 
 #pa2 {
-    color: #2a7b83;
+    color: #005DA9;
 }
 
 /* Normas Section */
 .normas-container {
     background-color: #ECEFF9;
-    width: 100%;
+    width: 89%;
     /* margin: 100px 100px 25px 100px; */
 }
 
@@ -113,11 +113,19 @@ input[type="checkbox"]:checked::after {
     left: 2px;
 }
 
-#sp1,
-#sp2,
+#sp1 {
+    display: block;
+    margin-left: -7px;
+}
+
+#sp2 {
+    display: block;
+    margin-left: 40px;
+}
+
 #sp3 {
     display: block;
-    margin-left: 10px;
+    margin-left: 37px;
 }
 
 #sp2 {
