--- a/css/page19.css
+++ b/css/page19.css
@@ -89,7 +89,7 @@ body {
     padding-top: 20px;
     text-align: center;
     font-family: sans-serif;
-    top: 0.5rem;
+    top: -0.5rem;
     right: 4rem;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
 }
@@ -125,6 +125,10 @@ body {
     color: #1a7282;
 }
 
+.section-title1{
+    color: #9E1981;
+}
+
 .circle-number {
     display: inline-block;
     background-color: #1a7282;
@@ -150,6 +154,9 @@ body {
     box-shadow: 0 0 0 3px #fff, 0 0 0 4px #ada9a9;
 }
 
+.mt-3{
+    margin-left: 30px;
+}
 
 .activity3a-label {
     font-weight: bold;
@@ -160,7 +167,7 @@ body {
 }
 
 .adjectives {
-    margin: 15px 0;
+    margin: 15px 30px;
 }
 
 .tag {
@@ -542,6 +549,7 @@ ul {
     height: 26px;
     border-radius: 50%;
     text-align: center;
+    margin-right: 10px;
 }
 
 .header2 {
