--- a/css/page15.css
+++ b/css/page15.css
@@ -1,7 +1,7 @@
 /* header section */
 #header-container {
     background-color: #2a7b83;
-    width: 100%;
+    width: 118%;
     z-index: 9;
     position: relative;
 }
@@ -140,8 +140,19 @@ input[type="checkbox"]:checked::after {
 }
 
 /* Responsive tweaks */
-@media (max-width: 425px) {
-    .normas-container {
-        margin-left: -13%;
+
+@media (min-width: 992px) {
+    .col-lg-4 {
+        /* flex: 0 0 auto; */
+        width: 33%;
+        padding: 0px;
+        flex-direction: column;
+    }
+}
+@media (min-width: 768px) {
+    .col-md-4 {
+        /* flex: 0 0 auto; */
+        width: 33.33333333%;
+        padding: 0 !important;
     }
 }
